--- a/templates/base.html
+++ b/templates/base.html
@@ -152,7 +152,16 @@ html {
 #section2 {
   height: auto;
 }
-
+#ushqime {
+  height: auto;
+  background-color:black;
+  color: black;
+}
+#keksa {
+  height: auto;
+  background-color:black;
+  color: black;
+}
 .borderbox {
 box-shadow: 0 1px rgba(0, 0, 0, 0.3),
             0 3px 7px rgba(0, 0, 0, 0.3),
