--- a/templates/dino.html
+++ b/templates/dino.html
@@ -129,30 +129,295 @@ font-size: 17px;
 
     </div>
 
-    <div class="slideshow-container" style="color: white;">
+   <div style="color: white;">
         {% for item in values1 %}
         {% if item.category=="Pije" %}
-        <div style="color: white; margin-top: 200px;" id="{{item.product}}">
-            <form method="post">
-                <div class="mySlides99" style="text-align: center;">
-                    <p style="color: #d62217;">{{item.product}} - cmimi {{item.price}} €</p>
-                    <p style="color: #d62217;">Sasia në depo - <span class="badge">{{item.quantity}}</span></p>
-                    <img src="static/images/{{item.product}}.png" style="height:400px;">
-                    <p><input class="container-fluid borderbox" type="number" name="quantity"
-                              pattern="[0-9]*" min="1"
-                              placeholder="Sasia"
-                              style="margin-bottom: 0px; width: 130px; height: 36px; border: none; color: #d62217;"
-                              required><br><input class="eoli" type="submit" name="submit{{item.product}}"
-                                                  style="background-color: #D63D17; color: white; width: 130px; height: 36px; margin-bottom: 0px; margin-top: 5px;"
-                                                  value="Shto në listë">
-                    </p>
-                </div>
-            </form>
+        {% if item.section=="Të gazuara" %}
+        {% if item.company=="Coca Cola" %}
+        <div class="slideshow-container">
+            <div style="color: white; margin-top: 200px;" id="{{item.product}}">
+                <form method="post">
+                    <div class="mySlides99" style="text-align: center;">
+                        <p style="color: #d62217;">{{item.product}} - çmimi {{item.price}} €</p>
+                        <p style="color: #d62217;">Sasia në depo - <span class="badge">{{item.quantity}}</span></p>
+                        <img src="static/images/{{item.product}}.png" style="height:400px;">
+                        <p><input class="container-fluid borderbox" type="number" name="quantity"
+                                  pattern="[0-9]*" min="1"
+                                  placeholder="Sasia"
+                                  style="margin-bottom: 0px; width: 130px; height: 36px; border: none; color: #d62217;"
+                                  required><br><input class="eoli" type="submit" name="submit{{item.product}}"
+                                                      style="background-color: #D63D17; color: white; width: 130px; height: 36px; margin-bottom: 0px; margin-top: 5px;"
+                                                      value="Shto në listë">
+                        </p>
+                    </div>
+                </form>
+            </div>
         </div>
         {% endif %}
+        {% endif %}
+        {% endif %}
         {% endfor %}
-
-
+    </div>
+    <div style="color: white;">
+        {% for item in values1 %}
+        {% if item.category=="Pije" %}
+        {% if item.section=="Të gazuara" %}
+        {% if item.company=="Fanta" %}
+        <div class="slideshow-container">
+            <div style="color: white; margin-top: 200px;" id="{{item.product}}">
+                <form method="post">
+                    <div class="mySlides99" style="text-align: center;">
+                        <p style="color: #d62217;">{{item.product}} - çmimi {{item.price}} €</p>
+                        <p style="color: #d62217;">Sasia në depo - <span class="badge">{{item.quantity}}</span></p>
+                        <img src="static/images/{{item.product}}.png" style="height:400px;">
+                        <p><input class="container-fluid borderbox" type="number" name="quantity"
+                                  pattern="[0-9]*" min="1"
+                                  placeholder="Sasia"
+                                  style="margin-bottom: 0px; width: 130px; height: 36px; border: none; color: #d62217;"
+                                  required><br><input class="eoli" type="submit" name="submit{{item.product}}"
+                                                      style="background-color: #D63D17; color: white; width: 130px; height: 36px; margin-bottom: 0px; margin-top: 5px;"
+                                                      value="Shto në listë">
+                        </p>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {% endif %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
+    </div>
+    <div style="color: white;">
+        {% for item in values1 %}
+        {% if item.category=="Pije" %}
+        {% if item.section=="Të gazuara" %}
+        {% if item.company=="Pepsi" %}
+        <div class="slideshow-container">
+            <div style="color: white; margin-top: 200px;" id="{{item.product}}">
+                <form method="post">
+                    <div class="mySlides99" style="text-align: center;">
+                        <p style="color: #d62217;">{{item.product}} - çmimi {{item.price}} €</p>
+                        <p style="color: #d62217;">Sasia në depo - <span class="badge">{{item.quantity}}</span></p>
+                        <img src="static/images/{{item.product}}.png" style="height:400px;">
+                        <p><input class="container-fluid borderbox" type="number" name="quantity"
+                                  pattern="[0-9]*" min="1"
+                                  placeholder="Sasia"
+                                  style="margin-bottom: 0px; width: 130px; height: 36px; border: none; color: #d62217;"
+                                  required><br><input class="eoli" type="submit" name="submit{{item.product}}"
+                                                      style="background-color: #D63D17; color: white; width: 130px; height: 36px; margin-bottom: 0px; margin-top: 5px;"
+                                                      value="Shto në listë">
+                        </p>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {% endif %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
+    </div>
+    <div style="color: white;">
+        {% for item in values1 %}
+        {% if item.category=="Pije" %}
+        {% if item.section=="Të gazuara" %}
+        {% if item.company=="Sprite" %}
+        <div class="slideshow-container">
+            <div style="color: white; margin-top: 200px;" id="{{item.product}}">
+                <form method="post">
+                    <div class="mySlides99" style="text-align: center;">
+                        <p style="color: #d62217;">{{item.product}} - çmimi {{item.price}} €</p>
+                        <p style="color: #d62217;">Sasia në depo - <span class="badge">{{item.quantity}}</span></p>
+                        <img src="static/images/{{item.product}}.png" style="height:400px;">
+                        <p><input class="container-fluid borderbox" type="number" name="quantity"
+                                  pattern="[0-9]*" min="1"
+                                  placeholder="Sasia"
+                                  style="margin-bottom: 0px; width: 130px; height: 36px; border: none; color: #d62217;"
+                                  required><br><input class="eoli" type="submit" name="submit{{item.product}}"
+                                                      style="background-color: #D63D17; color: white; width: 130px; height: 36px; margin-bottom: 0px; margin-top: 5px;"
+                                                      value="Shto në listë">
+                        </p>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {% endif %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
+    </div>
+    <div style="color: white;">
+        {% for item in values1 %}
+        {% if item.category=="Pije" %}
+        {% if item.section=="Lëngje" %}
+        {% if item.company=="Frutti" %}
+        <div class="slideshow-container">
+            <div style="color: white; margin-top: 200px;" id="{{item.product}}">
+                <form method="post">
+                    <div class="mySlides99" style="text-align: center;">
+                        <p style="color: #d62217;">{{item.product}} - çmimi {{item.price}} €</p>
+                        <p style="color: #d62217;">Sasia në depo - <span class="badge">{{item.quantity}}</span></p>
+                        <img src="static/images/{{item.product}}.png" style="height:400px;">
+                        <p><input class="container-fluid borderbox" type="number" name="quantity"
+                                  pattern="[0-9]*" min="1"
+                                  placeholder="Sasia"
+                                  style="margin-bottom: 0px; width: 130px; height: 36px; border: none; color: #d62217;"
+                                  required><br><input class="eoli" type="submit" name="submit{{item.product}}"
+                                                      style="background-color: #D63D17; color: white; width: 130px; height: 36px; margin-bottom: 0px; margin-top: 5px;"
+                                                      value="Shto në listë">
+                        </p>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {% endif %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
+    </div>
+    <div style="color: white;">
+        {% for item in values1 %}
+        {% if item.category=="Pije" %}
+        {% if item.section=="Alkoolike" %}
+        {% if item.company=="Smirnoff" %}
+        <div class="slideshow-container">
+            <div style="color: white; margin-top: 200px;" id="{{item.product}}">
+                <form method="post">
+                    <div class="mySlides99" style="text-align: center;">
+                        <p style="color: #d62217;">{{item.product}} - çmimi {{item.price}} €</p>
+                        <p style="color: #d62217;">Sasia në depo - <span class="badge">{{item.quantity}}</span></p>
+                        <img src="static/images/{{item.product}}.png" style="height:400px;">
+                        <p><input class="container-fluid borderbox" type="number" name="quantity"
+                                  pattern="[0-9]*" min="1"
+                                  placeholder="Sasia"
+                                  style="margin-bottom: 0px; width: 130px; height: 36px; border: none; color: #d62217;"
+                                  required><br><input class="eoli" type="submit" name="submit{{item.product}}"
+                                                      style="background-color: #D63D17; color: white; width: 130px; height: 36px; margin-bottom: 0px; margin-top: 5px;"
+                                                      value="Shto në listë">
+                        </p>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {% endif %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
+    </div>
+    <div style="color: white;">
+        {% for item in values1 %}
+        {% if item.category=="Pije" %}
+        {% if item.section=="Alkoolike" %}
+        {% if item.company=="Birra Peja" %}
+        <div class="slideshow-container">
+            <div style="color: white; margin-top: 200px;" id="{{item.product}}">
+                <form method="post">
+                    <div class="mySlides99" style="text-align: center;">
+                        <p style="color: #d62217;">{{item.product}} - çmimi {{item.price}} €</p>
+                        <p style="color: #d62217;">Sasia në depo - <span class="badge">{{item.quantity}}</span></p>
+                        <img src="static/images/{{item.product}}.png" style="height:400px;">
+                        <p><input class="container-fluid borderbox" type="number" name="quantity"
+                                  pattern="[0-9]*" min="1"
+                                  placeholder="Sasia"
+                                  style="margin-bottom: 0px; width: 130px; height: 36px; border: none; color: #d62217;"
+                                  required><br><input class="eoli" type="submit" name="submit{{item.product}}"
+                                                      style="background-color: #D63D17; color: white; width: 130px; height: 36px; margin-bottom: 0px; margin-top: 5px;"
+                                                      value="Shto në listë">
+                        </p>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {% endif %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
+    </div>
+    <div style="color: white;">
+        {% for item in values1 %}
+        {% if item.category=="Pije" %}
+        {% if item.section=="Alkoolike" %}
+        {% if item.company=="Birra Shkupi" %}
+        <div class="slideshow-container">
+            <div style="color: white; margin-top: 200px;" id="{{item.product}}">
+                <form method="post">
+                    <div class="mySlides99" style="text-align: center;">
+                        <p style="color: #d62217;">{{item.product}} - çmimi {{item.price}} €</p>
+                        <p style="color: #d62217;">Sasia në depo - <span class="badge">{{item.quantity}}</span></p>
+                        <img src="static/images/{{item.product}}.png" style="height:400px;">
+                        <p><input class="container-fluid borderbox" type="number" name="quantity"
+                                  pattern="[0-9]*" min="1"
+                                  placeholder="Sasia"
+                                  style="margin-bottom: 0px; width: 130px; height: 36px; border: none; color: #d62217;"
+                                  required><br><input class="eoli" type="submit" name="submit{{item.product}}"
+                                                      style="background-color: #D63D17; color: white; width: 130px; height: 36px; margin-bottom: 0px; margin-top: 5px;"
+                                                      value="Shto në listë">
+                        </p>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {% endif %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
+    </div>
+    <div style="color: white;">
+        {% for item in values1 %}
+        {% if item.category=="Pije" %}
+        {% if item.section=="Alkoolike" %}
+        {% if item.company=="Birra Lasko" %}
+        <div class="slideshow-container">
+            <div style="color: white; margin-top: 200px;" id="{{item.product}}">
+                <form method="post">
+                    <div class="mySlides99" style="text-align: center;">
+                        <p style="color: #d62217;">{{item.product}} - çmimi {{item.price}} €</p>
+                        <p style="color: #d62217;">Sasia në depo - <span class="badge">{{item.quantity}}</span></p>
+                        <img src="static/images/{{item.product}}.png" style="height:400px;">
+                        <p><input class="container-fluid borderbox" type="number" name="quantity"
+                                  pattern="[0-9]*" min="1"
+                                  placeholder="Sasia"
+                                  style="margin-bottom: 0px; width: 130px; height: 36px; border: none; color: #d62217;"
+                                  required><br><input class="eoli" type="submit" name="submit{{item.product}}"
+                                                      style="background-color: #D63D17; color: white; width: 130px; height: 36px; margin-bottom: 0px; margin-top: 5px;"
+                                                      value="Shto në listë">
+                        </p>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {% endif %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
+    </div>
+    <div style="color: white;">
+        {% for item in values1 %}
+        {% if item.category=="Pije" %}
+        {% if item.section=="Alkoolike" %}
+        {% if item.company=="Jack Daniels" %}
+        <div class="slideshow-container">
+            <div style="color: white; margin-top: 200px;" id="{{item.product}}">
+                <form method="post">
+                    <div class="mySlides99" style="text-align: center;">
+                        <p style="color: #d62217;">{{item.product}} - çmimi {{item.price}} €</p>
+                        <p style="color: #d62217;">Sasia në depo - <span class="badge">{{item.quantity}}</span></p>
+                        <img src="static/images/{{item.product}}.png" style="height:400px;">
+                        <p><input class="container-fluid borderbox" type="number" name="quantity"
+                                  pattern="[0-9]*" min="1"
+                                  placeholder="Sasia"
+                                  style="margin-bottom: 0px; width: 130px; height: 36px; border: none; color: #d62217;"
+                                  required><br><input class="eoli" type="submit" name="submit{{item.product}}"
+                                                      style="background-color: #D63D17; color: white; width: 130px; height: 36px; margin-bottom: 0px; margin-top: 5px;"
+                                                      value="Shto në listë">
+                        </p>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {% endif %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
     </div>
 
 
