--- a/templates/order.html
+++ b/templates/order.html
@@ -27,6 +27,40 @@
 .eoli:hover {
      opacity: 0.85;
 }
+.closebtn1 {
+  padding: 2px;
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 16px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.closebtn {
+padding: 3px;
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: grey;
+
+
+.badge{
+background-color: #D63D17;
+height: 23px;
+width: auto;
+font-size: 17px;
+padding: 5px;
+}
 
 </style>
 
@@ -157,13 +191,28 @@
     {% if messages %}
     {% for msg in messages %}
     {% if msg=="Porosia është e zbrazët!" %}
-    <p style="color: black; opacity: 1.0; text-align: center;">{{msg}}</p>
+    <div style="text-align: center;">
+                <span class="badge" style="background-color: red; border: none;">
+                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                    <span class="closebtn1">{{msg}}</span>
+                </span>
+        </div>
     {% endif %}
     {% if msg=="Nuk ka sasi të mjaftueshme në depo!" %}
-    <p style="color: black; opacity: 1.0; text-align: center;">{{msg}}</p>
+    <div style="text-align: center;">
+                <span class="badge" style="background-color: red; border: none;">
+                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                    <span class="closebtn1">{{msg}}</span>
+                </span>
+        </div>
     {% endif %}
     {% if msg=="Porosia është dërguar me sukses!" %}
-    <p style="color: green; opacity: 1.0; text-align: center;">{{msg}}</p>
+    <div style="text-align: center;">
+                <span class="badge" style="background-color: green; border: none;">
+                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                    <span class="closebtn1">{{msg}}</span>
+                </span>
+        </div>
     {% endif %}
     {% endfor %}
     {% endif %}
