--- a/templates/password.html
+++ b/templates/password.html
@@ -14,6 +14,41 @@
   color:  #D63D17;
   opacity: 1.0;
 }
+.closebtn1 {
+  padding: 2px;
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 16px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.closebtn {
+padding: 3px;
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: grey;
+
+
+.badge{
+background-color: #D63D17;
+height: 23px;
+width: auto;
+font-size: 17px;
+padding: 5px;
+}
+
 
 </style>
 <body style="background-color: #D63D17; color: white;">
@@ -35,12 +70,17 @@
                                                   style="margin-bottom: 20px; width: 700px; height: 50px; border: none; color: #D63D17;" required>
             </p>
             <p><input type="submit" name="submit" style="color: #D63D17;"></p>
-            <p><a href="/changepassword" style="color: #003F78;">Ndrysho fjalëkalimin?</a></p>
+            <p><a href="/changepassword" style="color: black;">Ndrysho fjalëkalimin?</a></p>
         </form>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         {% for msg in messages %}
-        <p style="color: black; opacity: 1.0; font-size: 22px;">{{msg}}</p>
+        <div style="text-align: center;">
+                <span class="badge" style="background-color: red; border: none;">
+                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                    <span class="closebtn1">{{msg}}</span>
+                </span>
+        </div>
         {% endfor %}
         {% endif %}
         {% endwith %}
