--- a/templates/requestfromclient.html
+++ b/templates/requestfromclient.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
-    <h1>Kërkesë nga {{user}}</h1>
-    <h4>{{text}}</h4>
+    <p>Kërkesë nga: {{emri}}<br>
+    Adresa: {{adresa}}</p>
+    <h1>Arsyeja e kërkesës: <br>{{text}}</h1>
 </div>
