--- a/templates/Spaceinvaders.html
+++ b/templates/Spaceinvaders.html
@@ -1,83 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Market Egzoni - Ushqime{% endblock %}
 {% block content %}
-
-<style>
-    body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-}
-* {box-sizing: border-box}
-.mySlides1, .mySlides2, .mySlides4, .mySlides5 {display: none}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-@media only screen and (max-width: 750px) {
-    #searchremove {
-        display: none;
-    }
-}
-@media only screen and (min-width: 750px) {
-    #searchremove1 {
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 1000px) {
-    #pic {
-        display: none;
-    }
-}
-@media only screen and (min-width: 1000px) {
-    #pic1 {
-        display: none;
-    }
-}
-
-.badge{
-background-color: #D63D17;
-height: 23px;
-width: auto;
-border-radius: 50%;
-font-size: 17px;
-}
-.alert {
-  padding: 5px;
-  background-color: black;
-  color: white;
-  height: auto;
-  text-align: center;
-  display: block
-   margin-left: auto;
-   margin-right: auto;
-   width: 98%;
-}
-
-.closebtn {
-  padding: 5px;
-  margin-left: 15px;
-  color: white;
-  font-weight: bold;
-  float: right;
-  font-size: 22px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.closebtn:hover {
-  color: grey;
-
-
-
-</style>
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/productstyle.css') }}">
 <body>
-<div style="text-align: right; margin-top: 20px; margin-right: 20px;">
+<div style="text-align: right; margin-top: 20px; margin-right: 20px">
     <div class="dropdown" style="text-align: left;" id="search">
         <input onclick="mysearchFunction()" type="text" placeholder="Kërko..." id="myInput"
                onkeyup="filtersearchFunction()" class="borderbox1">
