--- a/templates/index.html
+++ b/templates/index.html
@@ -1,134 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Market Egzoni{% endblock %}
 {% block content %}
-<style>
-    body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-}
-::placeholder {
-  color:  #D63D17;
-  opacity: 0.85;
-}
-.myDivElement{
-    text-align:center;
-}
-.myDivElement ul li{
-   display:inline;
-
- }
-.indicator {
-position: relative;
-width: 50px;
-height: 50px;
-transform: rotate(45deg);
-}
-
-.indicator span {
- postion: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: block;
-  box-sizing: border-box;
-  border: none;
-  border-right: 3px solid #D63D17;
-  border-bottom: 3px solid #D63D17;
-}
-
-
-#example1 {
-  border: none;
-  border-radius: 25px;
-  padding: 10px;
-  box-shadow: 3px 5px #212F3D;
-  background-color: #D63D17;
-  width: auto;
-  height: auto;
-}
-#example11 {
-  border: none;
-  border-radius: 25px;
-  padding: 10px;
-  box-shadow: 3px 5px #212F3D;
-  background-color: #d62217;
-  width: auto;
-  height: auto;
-
-}
-#example2 {
-  border: none;
-  border-radius: 25px;
-  padding: 10px;
-  box-shadow: 3px 5px #212F3D;
-  background-color: #d62217;
-  width: 350px;
-
-
-
-}
-#example5 {
-  border: none;
-  border-radius: 25px;
-  padding: 10px;
-  box-shadow: 3px 5px #212F3D;
-  background-color: #d62217;
-  width: 350px;
-
-
-
-}
-#section1 {
-  height: auto;
-  background-color: white;
-}
-
-#section2 {
-  height: auto;
-  background-color: white;
-}
-
-.row {
-  display: flex;
-}
-
-
-.column {
-  flex: 50%;
-  padding: 5px;
-}
-
-@media only screen and (max-width: 750px) {
-    #btngroup {
-        display: none;
-    }
-    #example3 {
-        display: none;
-    }
-    #remove {
-        display: none;
-    }
-}
-@media only screen and (min-width: 750px) {
-    #btngroup1 {
-        display: none;
-    }
-    #example4 {
-        display: none;
-    }
-    #remove1 {
-        display: none;
-    }
-}
-
-
-
-
-
-
-
-</style>
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/stylesindex.css') }}">
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/productstyle.css') }}">
 <body>
 <div class="main" id="section1" style="margin: 0px 0px 0px 0px;">
 
@@ -152,6 +26,17 @@ transform: rotate(45deg);
             </div>
         </div>
     </div>
+    <div class="container-fluid"
+     style="position: fixed; margin: -65px 0px 0px 0px; display: block; cursor: pointer; z-index: 99;">
+    {% with messages = get_flashed_messages() %}
+    {% for msg in messages %}
+    <div class="alert" style="position: absolute;">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        <strong>{{msg}}</strong>
+    </div>
+    {% endfor %}
+    {% endwith %}
+</div>
     <p style="font-family: 'stencil'; text-align: center; color: #d62217; font-size: 65px; margin: 0px 0px 0px 0px; padding-top: 30px;"
        id="btngroup1">
         <img src="static/images/logo1.png" height="80px"> <img src="static/images/cart.png" height="70px"
@@ -182,8 +67,6 @@ transform: rotate(45deg);
                 mund edhe ti porositni ato. Porosia juaj arrinë në një ditë të caktuar të javës, varësisht nga vendi në
                 të cilën gjendeni.</p>
             <p style="font-size: 25px; color:white;">
-                Pra, qfarë po pritni. Porositni sa më shpejt!
-
             </p>
         </div>
         <a href="#section2" style="color: #007bff;">
@@ -235,33 +118,47 @@ transform: rotate(45deg);
         <div style="text-align: center;">
             <p style="font-size: 25px; color:#d62217;">Mund të na dërgoni kërkesën tuaj direkt në emailin tonë duke
                 e shkruar kërkesën e juaj më poshtë.</p>
-            <form method="post" style=" margin-bottom: 100px;" id="remove">
-                <textarea
-                        class="container-fluid" name="name" placeholder="Kerkesa juaj" rows="5" cols="60"
-                        style="margin-bottom: 20px; width: 700px; height: 150px; border: black; color:#d62217; box-shadow:
-                        0 0 1px rgba(0, 0, 0, 0.3),
-                        0 3px 7px rgba(0, 0, 0, 0.3),
-                        inset 0 1px rgba(255,255,255,1),
-                        inset 0 -3px 2px rgba(0,0,0,0.25); border-radius: 5px;
-                        background: linear-gradient(#eeefef, #ffffff 10%);" required
-                ></textarea><br>
-                <input type="submit" name="submit" value="Dërgo" style="color: #d62217;">
-            </form>
-            <form method="post" style=" margin-bottom: 100px;" id="remove1">
-                <textarea
-                        class="container-fluid" name="name" placeholder="Kerkesa juaj" rows="5" cols="60"
-                        style="margin-bottom: 20px; width: 430px; height: 150px; border: black; color:#d62217; box-shadow:
-                        0 0 1px rgba(0, 0, 0, 0.3),
-                        0 3px 7px rgba(0, 0, 0, 0.3),
-                        inset 0 1px rgba(255,255,255,1),
-                        inset 0 -3px 2px rgba(0,0,0,0.25); border-radius: 5px;
-                        background: linear-gradient(#eeefef, #ffffff 10%);" required
-                ></textarea><br>
-                <input type="submit" name="submit" value="Dërgo" style="color: #d62217;">
-            </form>
+                <button onclick="document.getElementById('id00').style.display='block'" style="width:auto; margin-bottom: 100px;" class="button1">Kërkesa juaj</button>
+
+                <div id="id00" class="modal">
+                  
+                  <form class="modal-content animate" method="post">
+                    <div class="imgcontainer">
+                        <h1 style="color: #d62217;">Kërkesa/Ankesa Juaj</h1>
+                      <span onclick="document.getElementById('id00').style.display='none'" class="close" title="Anulo">&times;</span>
+                    </div>
+                    
+                
+                    <div class="container-fluid">
+                        <input class="container-fluid textareastyle" type="text" name="emri" placeholder="Emri dhe Mbiemri" required minlength="4" style="height: 50px;">
+                        <input class="container-fluid textareastyle" type="text" name="adresa" placeholder="Adresa" required style="height: 50px;">
+                        <input class="container-fluid textareastyle" type="text" name="titulli" placeholder="Titulli i kërkesës" required minlength="4" style="height: 50px;">
+                        <textarea class="container-fluid textareastyle" name="name" placeholder="Arsyeja e kërkesës suaj" rows="5" cols="60" required minlength="10"
+                       ></textarea><br>
+                
+                    </div>
+                
+                    <div class="container-fluid" style="background-color:#f1f1f1">
+                      <button type="button" onclick="document.getElementById('id00').style.display='none'" class="cancelbtn button1">Anulo</button>
+                      <input type="submit" name="ankes" value="Dërgo" class="cancelbtn button1">
+                    </div>
+                  </form>
+                </div>
+                </div>
         </div>
     </div>
 </div>
+<script>
+    // Get the modal
+    var modal = document.getElementById('id00');
+    
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+    </script>
 </body>
 {% endblock %}
 
