--- a/templates/password.html
+++ b/templates/password.html
@@ -8,49 +8,9 @@
     <link rel="shortcut icon" type="image/png" href="static/images/logo2.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
 </head>
-<style>
-    ::placeholder {
-  color:  #D63D17;
-  opacity: 1.0;
-}
-.closebtn1 {
-  padding: 2px;
-  margin-left: 15px;
-  color: white;
-  font-weight: bold;
-  float: right;
-  font-size: 16px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-.closebtn {
-padding: 3px;
-  margin-left: 15px;
-  color: white;
-  font-weight: bold;
-  float: right;
-  font-size: 22px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
-}
 
-.closebtn:hover {
-  color: grey;
-
-
-.badge{
-background-color: #D63D17;
-height: 23px;
-width: auto;
-font-size: 17px;
-padding: 5px;
-}
-
-
-</style>
 <body style="background-color: #D63D17; color: white;">
 <div style="padding-bottom: 100px;">
     <a href="/home"><img src="static/images/cart.png" alt="Logo" height="50" style="padding: 10px 10px 0px"></a>
